// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expense summary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.30
  </h1>
</div>
`;

exports[`should correctly render expense summary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    33
     
    expenses
     totalling 
    $230,123,045.67
  </h1>
</div>
`;
